ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ray-tracing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ray-tracing.hfs.dev
    secretName: ray-tracing-tls
  rules:
  - host: ray-tracing.hfs.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: ray-tracing
          servicePort: 80
