manifest.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ray-tracing
spec:
  type: NodePort
  selector:
    app: ray-tracing
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ray-tracing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ray-tracing
  template:
    metadata:
      labels:
        app: ray-tracing
    spec:
      containers:
      - name: ray-tracing
        image: hugo19941994/ray-tracing
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-tracing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ray-tracing.hfs.dev
    secretName: ray-tracing-tls
  rules:
  - host: ray-tracing.hfs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ray-tracing
            port:
              number: 80
